--- a/search.html
+++ b/search.html
@@ -6,8 +6,8 @@
                gcse.src   = 'https://cse.google.com/cse.js?cx=' + cx;
                var s = document.getElementsByTagName('script')[0];
                s.parentNode.insertBefore(gcse, s);
-            })();</script><gcse:searchresults-only></gcse:searchresults-only></div></article></main><footer class="footer"><div class="footer__copyright"><p>Powered by <a href="https://getpublii.com" target="_blank" rel="nofollow noopener">Publii Static CMS</a></p></div><button class="footer__bttop js-footer__bttop" aria-label="Back to top"><svg><title>Back to top</title><use xlink:href="https://cendanaresort.github.io/pages/assets/svg/svg-map.svg#toparrow"/></svg></button></footer></div><script>window.publiiThemeMenuConfig = {    
-        mobileMenuMode: 'sidebar',
+            })();</script><gcse:searchresults-only></gcse:searchresults-only></div></article></main><footer class="footer"><div class="footer__copyright"><p>Managed by Pakerisan</p></div><button class="footer__bttop js-footer__bttop" aria-label="Back to top"><svg><title>Back to top</title><use xlink:href="https://cendanaresort.github.io/pages/assets/svg/svg-map.svg#toparrow"/></svg></button></footer></div><script>window.publiiThemeMenuConfig = {    
+        mobileMenuMode: 'overlay',
         animationSpeed: 300,
         submenuWidth: 'auto',
         doubleClickTime: 500,
